--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,7 +23,7 @@ services:
   db:
     image: postgres:13-alpine
     volumes:
-      - dev-db-data:C:\Program Files\PostgreSQL\15\data
+      - dev-db-data:/C/Program Files/PostgreSQL/15/data
     environment:
       - POSTGRES_DB=devdb
       - POSTGRES_USER=devuser
